<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistoPadreMadreActivity" >

    <EditText
        android:id="@+id/emailPadreMadre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress" >
    </EditText>

    <EditText
        android:id="@+id/passwordPadreMadre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/ButtonFUR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fur" 
        android:layout_marginBottom="6dp"/>

    <EditText
        android:id="@+id/fechaFUR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/buttonRegistroPadreMadre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegistroPadreMadre" />

</LinearLayout>